# mutgos_server

./: .dockerignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  STYLE_GUIDE.md
src/: CMakeLists.txt
src/angelscriptinterface/: CMakeLists.txt  angelscript_AEntity.cpp  angelscript_AEntity.h  angelscript_AFormattedText.cpp  angelscript_AFormattedText.h  angelscript_AString.cpp  angelscript_AString.h  angelscript_AngelException.cpp  angelscript_AngelException.h  angelscript_AngelProcess.cpp  angelscript_AngelProcess.h  angelscript_AngelScriptAccess.cpp  angelscript_AngelScriptAccess.h  angelscript_CompiledBytecodeStream.cpp  angelscript_CompiledBytecodeStream.h  angelscript_DatabaseOps.cpp  angelscript_DatabaseOps.h  angelscript_InputOutputOps.cpp  angelscript_InputOutputOps.h  angelscript_MovementOps.cpp  angelscript_MovementOps.h  angelscript_OnlineStatEntry.cpp  angelscript_OnlineStatEntry.h  angelscript_ScriptContext.cpp  angelscript_ScriptContext.h  angelscript_ScriptUtilities.cpp  angelscript_ScriptUtilities.h  angelscript_SimpleGCObject.cpp  angelscript_SimpleGCObject.h  angelscript_StringFactory.cpp  angelscript_StringFactory.h  angelscript_SystemOps.cpp  angelscript_SystemOps.h
src/bcrypt/: BCrypt.hpp  CMakeLists.txt  README.md  bcrypt.c  crypt_blowfish.c  wrapper.c
src/channels/: CMakeLists.txt  events_Channel.cpp  events_Channel.h  events_ChannelClientDataMessage.h  events_ChannelControlListener.h  events_ChannelFlowMessage.h  events_ChannelMessage.h  events_ChannelTextMessage.h  events_ClientDataChannel.cpp  events_ClientDataChannel.h  events_ClientDataReceiver.h  events_TextChannel.cpp  events_TextChannel.h  events_TextChannelReceiver.h
src/clientmessages/: CMakeLists.txt  message_AuthenticationRequest.cpp  message_AuthenticationRequest.h  message_ChannelData.cpp  message_ChannelData.h  message_ChannelStatus.cpp  message_ChannelStatus.h  message_ChannelStatusChange.cpp  message_ChannelStatusChange.h  message_ClientAuthenticationResult.cpp  message_ClientAuthenticationResult.h  message_ClientChannelRequestClose.cpp  message_ClientChannelRequestClose.h  message_ClientConnectPuppetRequest.cpp  message_ClientConnectPuppetRequest.h  message_ClientDataAcknowledge.cpp  message_ClientDataAcknowledge.h  message_ClientDataAcknowledgeReconnect.cpp  message_ClientDataAcknowledgeReconnect.h  message_ClientDisconnect.cpp  message_ClientDisconnect.h  message_ClientExecuteEntity.cpp  message_ClientExecuteEntity.h  message_ClientFindEntityRequest.cpp  message_ClientFindEntityRequest.h  message_ClientFindEntityResult.cpp  message_ClientFindEntityResult.h  message_ClientMatchNameRequest.cpp  message_ClientMatchNameRequest.h  message_ClientMatchNameResult.cpp  message_ClientMatchNameResult.h  message_ClientMessage.cpp  message_ClientMessage.h  message_ClientMessageType.cpp  message_ClientMessageType.h  message_ClientRequestSiteList.cpp  message_ClientRequestSiteList.h  message_ClientSiteList.cpp  message_ClientSiteList.h  message_ClientTextData.cpp  (+5 more)
src/comminterface/: CMakeLists.txt  comm_ClientChannelInfo.h  comm_ClientConnection.h  comm_ClientSession.cpp  comm_ClientSession.h  comm_CommAccess.cpp  comm_CommAccess.h  comm_CommonTypes.h  comm_ConnectionDriver.h  comm_RouterEvent.h  comm_RouterSessionManager.cpp  comm_RouterSessionManager.h  comm_SessionStats.h
src/concurrency/: CMakeLists.txt  concurrency_LockException.cpp  concurrency_LockException.h  concurrency_LockableObject.cpp  concurrency_LockableObject.h  concurrency_NoLockToken.cpp  concurrency_NoLockToken.h  concurrency_ReaderLockToken.cpp  concurrency_ReaderLockToken.h  concurrency_WriterLockToken.cpp  concurrency_WriterLockToken.h
src/dbdump/: CMakeLists.txt  dbdump_DumpReaderInterface.cpp  dbdump_DumpReaderInterface.h  dbdump_MutgosDumpFileReader.cpp  dbdump_MutgosDumpFileReader.h
src/dbinterface/: CMakeLists.txt  dbinterface_CachedEntity.cpp  dbinterface_CachedEntity.h  dbinterface_CommonTypes.h  dbinterface_DatabaseAccess.cpp  dbinterface_DatabaseAccess.h  dbinterface_DatabaseEntityListener.h  dbinterface_DbBackend.cpp  dbinterface_DbBackend.h  dbinterface_DbResultCode.cpp  dbinterface_DbResultCode.h  dbinterface_EntityMetadata.h  dbinterface_EntityRef.cpp  dbinterface_EntityRef.h  dbinterface_EntityRefCounter.cpp  dbinterface_EntityRefCounter.h  dbinterface_SiteCache.cpp  dbinterface_SiteCache.h  dbinterface_SiteInfo.h  dbinterface_UpdateManager.cpp  dbinterface_UpdateManager.h
src/dbtypes/: CMakeLists.txt  dbtype_ActionEntity.cpp  dbtype_ActionEntity.h  dbtype_ApplicationProperties.cpp  dbtype_ApplicationProperties.h  dbtype_BooleanProperty.cpp  dbtype_BooleanProperty.h  dbtype_Capability.cpp  dbtype_Capability.h  dbtype_Command.cpp  dbtype_Command.h  dbtype_ContainerPropertyEntity.cpp  dbtype_ContainerPropertyEntity.h  dbtype_DatabaseEntityChangeListener.cpp  dbtype_DatabaseEntityChangeListener.h  dbtype_DocumentProperty.cpp  dbtype_DocumentProperty.h  dbtype_Entity.cpp  dbtype_Entity.h  dbtype_EntityField.cpp  dbtype_EntityField.h  dbtype_EntityType.cpp  dbtype_EntityType.h  dbtype_Exit.cpp  dbtype_Exit.h  dbtype_FloatProperty.cpp  dbtype_FloatProperty.h  dbtype_Group.cpp  dbtype_Group.h  dbtype_Guest.cpp  dbtype_Guest.h  dbtype_Id.cpp  dbtype_Id.h  dbtype_IdProperty.cpp  dbtype_IdProperty.h  dbtype_IntegerProperty.cpp  dbtype_IntegerProperty.h  dbtype_Lock.cpp  dbtype_Lock.h  dbtype_Player.cpp  (+35 more)
src/events/: CMakeLists.txt  events_CommonTypes.h  events_ConnectionEvent.cpp  events_ConnectionEvent.h  events_ConnectionEventProcessor.cpp  events_ConnectionEventProcessor.h  events_ConnectionSubscriptionParams.cpp  events_ConnectionSubscriptionParams.h  events_EmitEvent.cpp  events_EmitEvent.h  events_EmitEventProcessor.cpp  events_EmitEventProcessor.h  events_EmitSubscriptionParams.cpp  (+44 more)
(+227 files in other folders)
