add_subdirectory(concurrency)
add_subdirectory(dbtypes)
add_subdirectory(logging)
add_subdirectory(osinterface)
add_subdirectory(executor)
add_subdirectory(text)
add_subdirectory(events)
add_subdirectory(clientmessages)
add_subdirectory(channels)
add_subdirectory(comminterface)
add_subdirectory(security)
add_subdirectory(primitives)
add_subdirectory(socketcomm)
add_subdirectory(websocketcomm)
add_subdirectory(dbinterface)
add_subdirectory(dbdump)
add_subdirectory(sqliteinterface)
add_subdirectory(utilities)
add_subdirectory(softcode)
add_subdirectory(angelscriptinterface)
add_subdirectory(useragent)

add_subdirectory(exe)
